# roscopter

./: README.md
launch/: robot.launch
src/croc_CalcLandingPos/: CMakeLists.txt  package.xml
src/croc_CalcLandingPos/src/: main.cpp
src/croc_command/: CMakeLists.txt  package.xml
src/croc_command/include/croc_command/: croc_command.h
src/croc_command/src/: croc_command.cpp
src/croc_detecting_mark_3/: CMakeLists.txt  package.xml
src/croc_detecting_mark_3/include/croc_detecting_mark/: detecting_mark.h  ros_opencv_bridge.h
src/croc_detecting_mark_3/src/: main.cpp
src/croc_log/: CMakeLists.txt  package.xml  package1.xml
src/croc_log/include/: croc_log.h
src/croc_log/src/: croc_log.cpp
src/croc_navi/: CMakeLists.txt  package.xml
src/croc_navi/include/: croc_navi.h
src/croc_navi/src/: croc_navi.cpp
src/croc_pose3d/: CMakeLists.txt  package.xml
src/croc_pose3d/include/: croc_Pose3D.h
src/croc_pose3d/src/: croc_Pose3D.cpp
src/cyphy_serial_driver/: CMakeLists.txt  package.xml
src/cyphy_serial_driver/include/: flightcontrol.h  mkstruct.h  serial.h
src/cyphy_serial_driver/src/: flightcontrol.cpp  serial.cpp  serial_interface.cpp
