<package>
  <name>croc_command</name>
  <version>0.0.0</version>
  <description>

     croc_command

  </description>
  <author>Mike Charikov</author>
  <maintainer email="unk@unk.com">Mike Charikov</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/croc_command</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>croc_pose3d</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>croc_pose3d</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>


