<package>
  <name>croc_pose3d</name>
  <description>

     croc_Pose3D

  </description>
  <version>0.0.0</version>
  <author>Mike Charikov</author>
  <maintainer email="unknown@unknown.com">Mike Charikov</maintainer>  
  <license>BSD</license>
  <!--<review status="unreviewed" notes=""/>-->
  <url>http://ros.org/wiki/croc_Pose3D</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cyphy_serial_driver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cyphy_serial_driver</run_depend>

</package>


