<package>
  <name>cyphy_serial_driver</name>
  <version>0.0.0</version>
  <description>cyphy serial driver for mikrokopter.
Simple test.</description>
  <maintainer email="unk@unk.com">Inkyu Sa</maintainer>

  <license>GPL</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Inkyu Sa</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>control_toolbox</test_depend> -->

</package>